--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="game">
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
@@ -18,16 +18,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="#/about">About</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <!-- <div ng-view></div> -->
+        <div ng-view></div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
