added linked to about page and play game page

--- a/index.html
+++ b/index.html
@@ -6,33 +6,20 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body class='main'>
-        <h1 class='title'>
-            <i>Welcome to Bubble Trouble</i>
+
+        <h1 class='title'>Welcome to Bubble Trouble
         </h1>
-        <nav class="navbar navbar-default">
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#/">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#/about">About</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <a class='play' href="#/game">Play!</a>
+        <a class='about' href="#/about">About the game</a>
         <div class="bubbles">
           <img class='one' style="width:10em;height:10em;" src="bubble" alt="" />
-          <img class='two' style="width:20em;height:20em;" src="bubble" alt="" />
+          <img class='two' style="width:40em;height:40em;" src="bubble" alt="" />
           <img class='three' style="width:15em;height:15em;" src="bubble" alt="" />
           <img class='four' style="width:12em;height:12em;" src="bubble" alt="" />
           <img class='five' style="width:25em;height:25em;" src="bubble" alt="" />
-          <img class='six' style="width:13em;height:13em;" src="bubble" alt="" />
+          <img class='six' style="width:25em;height:25em;" src="bubble" alt="" />
           <img class='seven' style="width:12em;height:12em;" src="bubble" alt="" />
         </div>
-
 
         <div ng-view></div>
 
