changed play button responsivness

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     </head>
     <body class='main'>
 
-        <h1 class='title'>Welcome to Bubble Trouble</h1>
-
         <div ng-view></div>
-        
+
         <div class="bubbles">
             <img class='one' style="width:10em;height:10em;" src="bubble" alt=""/>
-            <img class='two' style="width:40vw;height:40vw;" src="bubble" alt=""/>
+            <!-- <img class='two' style="width:40vw;height:40vw;" src="bubble" alt=""/> -->
             <img class='three' style="width:15em;height:15em;" src="bubble" alt=""/>
             <img class='four' style="width:12em;height:12em;" src="bubble" alt=""/>
             <img class='five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
