tweaks to game page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </head>
     <body class='main'>
 
-        <h1 class='title'>Welcome to Bubble Trouble
-        </h1>
+        <h1 class='title'>Welcome to Bubble Trouble</h1>
         <div class="bubbles">
           <img class='one' style="width:10em;height:10em;" src="bubble" alt="" />
           <img class='two' style="width:40em;height:40em;" src="bubble" alt="" />
