about game link responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class='three' style="width:15em;height:15em;" src="bubble" alt=""/>
             <img class='four' style="width:12em;height:12em;" src="bubble" alt=""/>
             <img class='five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
-            <img class='six' style="width:25vw;height:25vw;" src="bubble" alt=""/>
+            <!-- <img class='six' style="width:25vw;height:25vw;" src="bubble" alt=""/> -->
             <img class='seven' style="width:12em;height:12em;" src="bubble" alt=""/>
         </div>
 
