about page responsiveness

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html ng-app="game">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="bubbles.css">
     </head>
     <body class='main'>
 
@@ -14,8 +15,8 @@
             <!-- <img class='two' style="width:40vw;height:40vw;" src="bubble" alt=""/> -->
             <img class='three' style="width:15em;height:15em;" src="bubble" alt=""/>
             <img class='four' style="width:12em;height:12em;" src="bubble" alt=""/>
-            <img class='five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
-            <!-- <img class='six' style="width:25vw;height:25vw;" src="bubble" alt=""/> -->
+            <!-- <img class='five' style="width:25vw;height:25vw;" src="bubble" alt=""/> -->
+            <img class='six' style="width:22vw;height:22vw;" src="bubble" alt=""/>
             <img class='seven' style="width:12em;height:12em;" src="bubble" alt=""/>
         </div>
 
