fix bubble spacing on game page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="shortcut icon" href="Assets/bubblepic.png" />
-        <link rel="stylesheet" href="TemplateData/style.css">
         <script src="TemplateData/UnityProgress.js"></script>
         <title>Bubble Trouble</title>
     </head>
@@ -14,13 +13,13 @@
         <div ng-view></div>
 
         <div class="bubbles">
-            <img class='one' style="width:10em;height:10em;" src="bubble" alt=""/>
+            <img class='bubble one' style="width:10em;height:10em;" src="bubble" alt=""/>
             <!-- <img class='two' style="width:40vw;height:40vw;" src="bubble" alt=""/> -->
-            <img class='three' style="width:15em;height:15em;" src="bubble" alt=""/>
-            <img class='four' style="width:12em;height:12em;" src="bubble" alt=""/>
-            <img class='five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
-            <img class='six' style="width:25vw;height:25vw;" src="bubble" alt=""/>
-            <img class='seven' style="width:12em;height:12em;" src="bubble" alt=""/>
+            <img class='bubble three' style="width:15em;height:15em;" src="bubble" alt=""/>
+            <img class='bubble four' style="width:16vw;height:16vw;" src="bubble" alt=""/>
+            <img class='bubble five' style="width:25vw;height:25vw;" src="bubble" alt=""/>
+            <img class='bubble six' style="width:25vw;height:25vw;" src="bubble" alt=""/>
+            <img class='bubble seven' style="width:17vw;height:17vw;" src="bubble" alt=""/>
         </div>
 
 
