about page completed

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="shortcut icon" href="Assets/bubblepic.png" />
+        <link rel="shortcut icon" href="Assets/bubblepic.png"/>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="bubbles.css">
         <script src="TemplateData/UnityProgress.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <title>Bubble Trouble</title>
     </head>
     <body class='main'>
